# veritas

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Procfile  README.md  agent_runner.py  docker-compose.dev.yml  docker-compose.yml  main.py  minimax_session.json  pyproject.toml  register_schema.py  start_backend.bat  start_frontend.bat  tampered_granular.json  tampered_session.json  test_backend.sh
.github/workflows/: ci.yml
examples/: basic_audit.py  chain_audit.py  deploy_proof.py  export_demo.py  live_test.py  minimax_audit.py  phase_b_demo.py  test_all_caps.py  test_capabilities.py
frontend/: CHANGES.md  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/test/: page.tsx
nginx/: nginx.conf
scripts/: deploy.sh
src/veritas/: Dockerfile  __init__.py  abis.py  adapter.py  agent.py  attestor.py  brain.py  cli.py  config.py  crypto.py  database.py  eas_abi.json  logger.py  merkle.py  tools.py  verifier.py
src/veritas/api/: main.py  schemas.py
src/veritas/tools/: __init__.py  base.py  constants.py  data.py  defi.py  erc20.py  identity.py  infra.py  nft.py  nillion.py  payments.py  social.py  token.py  wow.py
tests/: battle_test_api.py  conftest.py  stress_test_templates.py  test_agent_init.py  test_agent_mission.py  test_attestor.py  test_logger.py  test_merkle.py  test_tamper_detection.py  test_tools_integration.py
