[project]
name = "veritas"
version = "0.1.0"
description = "Veritas - AI Agent Platform for Base with Built-in Cryptographic Auditing"
readme = "README.md"
requires-python = ">=3.12"
pythonpath = ["src"]
dependencies = [
    "cdp-sdk>=1.37.0",
    "cryptography>=46.0.3",
    "eth-abi>=5.2.0",
    "eth-account>=0.13.7",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "slowapi>=0.1.9",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
    "websocket-client>=1.9.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.0.0",
]

[project.scripts]
veritas = "veritas.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
no_implicit_optional = false

